name:                simple-blockchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jbddc/simple-blockchain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BlockChain Block Dat Serving
  build-depends:       base >= 4.7 && < 5
                     , cryptonite >= 0.21
                     , bytestring >= 0.10
                     , hourglass
                     , containers
                     , random
                     , hspread
                     , stm
                     , aeson 
                     , bson-generic
                     , text
                     , mongoDB
                     , scotty
                     , scotty-tls
                     , http-types
                     , wai-extra
                     , stm
                     , securemem
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jbddc/simple-blockchain
