name:                simple-blockchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jbddc/simple-blockchain#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BlockChain Block Dat Serving Consensus Node Group User
  build-depends:       base >= 3 && < 5
                     , cryptonite >= 0.21
                     , bytestring >= 0.10
                     , hourglass
                     , containers
                     , random
                     , hspread
                     , stm
                     , aeson 
                     , bson-generic 
                     , text
                     , mongoDB >= 2.0
                     , scotty
                     , scotty-tls
                     , http-types
                     , wai
                     , wai-extra
                     , stm
                     , securemem
                     , base64-bytestring
  ghc-options:       -O2 
  default-language:    Haskell2010

executable node
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     BlockChain Block Dat Serving Consensus Node Group User
  build-depends:       base >= 3 && < 5
                     , cryptonite >= 0.21
                     , bytestring >= 0.10
                     , hourglass
                     , containers
                     , random
                     , hspread
                     , stm
                     , aeson 
                     , bson-generic 
                     , text
                     , mongoDB >= 2.0
                     , scotty
                     , http-types
                     , wai
                     , wai-extra
                     , stm
                     , base64-bytestring
  ghc-options:       -O2
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/jbddc/simple-blockchain
